# News_Backend

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
