[tool.poetry]
name = "News_Backend"
version = "0.1.0"
description = "FastAPI with Poetry and Docker"
authors = ["Ze <zeliu369@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

